--- a/charity/src/main/resources/application.properties
+++ b/charity/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=9090
 
 spring.datasource.url=jdbc:mysql://localhost:3306/charitydb
 spring.datasource.username=root
-spring.datasource.password=TanDat1410
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
