--- a/charity/src/main/resources/application.properties
+++ b/charity/src/main/resources/application.properties
@@ -5,5 +5,9 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql: true
+
+cloudinary.cloud_name = dvgpizkep
+cloudinary.api_id = 966854718195463
+cloudinary.api_secret = OC5koTFjGtt4tPZ-VqqsLHWb6ME
