--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,10 @@
     "@reduxjs/toolkit": "^1.9.6",
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.2",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
