--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "postcss": "^8.4.30",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
+    "react-cookie": "^6.1.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
