--- a/charity/src/main/resources/application.properties
+++ b/charity/src/main/resources/application.properties
@@ -7,5 +7,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql: true
-
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=20MB
+spring.servlet.multipart.file-size-threshold=0
 # logging.level.org.springframework.security=TRACE
