--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,14 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
+    "moment": "^2.29.4",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-cookie": "^6.1.1",
     "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
+    "react-moment": "^1.1.3",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "tailwindcss": "^3.3.3"
