--- a/charity/src/main/resources/application.properties
+++ b/charity/src/main/resources/application.properties
@@ -11,4 +11,6 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=20MB
 spring.servlet.multipart.file-size-threshold=0
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=Asia/Ho_Chi_Minh
 # logging.level.org.springframework.security=TRACE
