--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@reduxjs/toolkit": "^1.9.6",
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.0",
@@ -22,8 +24,9 @@
     "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-moment": "^1.1.3",
-    "react-redux": "^8.1.2",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
+    "redux": "^4.2.1",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
