[Long]-Update thống kê, login facebook, google, get reaction dựa post

--- a/charity/src/main/resources/application.properties
+++ b/charity/src/main/resources/application.properties
@@ -13,4 +13,14 @@ spring.servlet.multipart.max-request-size=20MB
 spring.servlet.multipart.file-size-threshold=0
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
+# logging.level.org.hibernate.SQL=DEBUG
+
+spring.security.oauth2.client.registration.facebook.client-id=871130644505230
+spring.security.oauth2.client.registration.facebook.client-secret =b1331871b0af57f0e4cc6746b91b2890
+spring.security.oauth2.client.registration.facebook.scope= email, public_profile
+
+spring.security.oauth2.client.registration.google.client-id=181736501806-m8i7gofgde5tco762o7tfbarfk1mru08.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope= email, profile
+
 # logging.level.org.springframework.security=TRACE
