--- a/charity/src/main/resources/application.properties
+++ b/charity/src/main/resources/application.properties
@@ -10,9 +10,8 @@ spring.jpa.show-sql: true
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=20MB
-spring.servlet.multipart.file-size-threshold=0
-spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-spring.jackson.time-zone=Asia/Ho_Chi_Minh
+# spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+# spring.jackson.time-zone=Asia/Ho_Chi_Minh
 # logging.level.org.hibernate.SQL=DEBUG
 
 spring.security.oauth2.client.registration.facebook.client-id=871130644505230
