[Long]-Update send mail, report

--- a/charity/src/main/resources/application.properties
+++ b/charity/src/main/resources/application.properties
@@ -23,3 +23,10 @@ spring.security.oauth2.client.registration.google.client-secret=GOCSPX-GCBBkz2Dx
 spring.security.oauth2.client.registration.google.scope= email, profile
 
 # logging.level.org.springframework.security=TRACE
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=lephilong02@gmail.com
+spring.mail.password=leln mrcy ehsa gwzs
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
