--- a/charity/pom.xml
+++ b/charity/pom.xml
@@ -95,7 +95,18 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
-	</dependencies>
+		<dependency>
+    		<groupId>org.apache.poi</groupId>
+    		<artifactId>poi</artifactId>
+    		<version>5.2.3</version>
+		</dependency>
+	
+   		<dependency>
+     		<groupId>org.apache.poi</groupId>
+     		<artifactId>poi-ooxml</artifactId>
+     		<version>5.2.3</version>
+   		</dependency>
+ </dependencies>
 
 	<build>
 		<plugins>
