--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@react-firebase/auth": "^0.2.10",
+    "@react-firebase/database": "^0.3.11",
     "@reduxjs/toolkit": "^1.9.6",
     "autoprefixer": "^10.4.16",
-    "axios": "^1.5.0",
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "firebase": "^10.4.0",
     "moment": "^2.29.4",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
