--- a/charity/src/main/resources/application.properties
+++ b/charity/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=9090
 
 spring.datasource.url=jdbc:mysql://localhost:3306/charitydb
 spring.datasource.username=root
-spring.datasource.password=TanDat1410
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
@@ -13,7 +13,6 @@ spring.servlet.multipart.max-request-size=20MB
 # spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 # spring.jackson.time-zone=Asia/Ho_Chi_Minh
 # logging.level.org.hibernate.SQL=DEBUG
-
 spring.security.oauth2.client.registration.facebook.client-id=871130644505230
 spring.security.oauth2.client.registration.facebook.client-secret =b1331871b0af57f0e4cc6746b91b2890
 spring.security.oauth2.client.registration.facebook.scope= email, public_profile
