--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "file-saver": "^2.0.5",
     "firebase": "^10.4.0",
     "moment": "^2.29.4",
     "postcss": "^8.4.30",
@@ -30,7 +31,8 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "redux": "^4.2.1",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
