--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-cookie": "^6.1.1",
     "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-moment": "^1.1.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
