--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.3.2",
     "file-saver": "^2.0.5",
     "firebase": "^10.4.0",
+    "jszip": "^3.10.1",
     "moment": "^2.29.4",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
