--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-moment": "^1.1.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
+    "react-scroll": "^1.9.0",
     "redux": "^4.2.1",
     "tailwindcss": "^3.3.3",
     "xlsx": "^0.18.5"
