--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/material": "^5.15.3",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.11",
     "@react-firebase/auth": "^0.2.10",
     "@react-firebase/database": "^0.3.11",
     "@reduxjs/toolkit": "^1.9.6",
@@ -34,6 +38,7 @@
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.9.0",
     "redux": "^4.2.1",
+    "styled-components": "^6.1.8",
     "tailwindcss": "^3.3.3",
     "xlsx": "^0.18.5"
   },
