--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@react-firebase/auth": "^0.2.10",
     "@react-firebase/database": "^0.3.11",
     "@reduxjs/toolkit": "^1.9.6",
+    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
@@ -40,7 +41,9 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.2",
     "redux": "^4.2.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
     "tailwindcss": "^3.3.3",
     "xlsx": "^0.18.5"
