--- a/charity/pom.xml
+++ b/charity/pom.xml
@@ -100,6 +100,10 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+		<dependency>
     		<groupId>org.apache.poi</groupId>
     		<artifactId>poi</artifactId>
     		<version>5.2.3</version>
