--- a/client/package.json
+++ b/client/package.json
@@ -25,14 +25,14 @@
     "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
     "file-saver": "^2.0.5",
     "firebase": "^10.4.0",
     "jszip": "^3.10.1",
     "moment": "^2.29.4",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.9.0",
+    "react-bootstrap": "^2.10.2",
     "react-cookie": "^6.1.1",
     "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
@@ -44,6 +44,8 @@
     "react-slick": "^0.30.2",
     "redux": "^4.2.1",
     "slick-carousel": "^1.8.1",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "styled-components": "^6.1.8",
     "tailwindcss": "^3.3.3",
     "xlsx": "^0.18.5"
