--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@react-firebase/database": "^0.3.11",
     "@reduxjs/toolkit": "^1.9.6",
     "@types/react-slick": "^0.23.13",
+    "@zegocloud/zego-uikit-prebuilt": "^2.0.1",
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.3",
