--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@react-firebase/auth": "^0.2.10",
     "@react-firebase/database": "^0.3.11",
     "@reduxjs/toolkit": "^1.9.6",
+    "@stomp/stompjs": "^7.0.0",
     "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
