--- a/k8s-configurations/mysql-k8s/mysql-deployment.yaml
+++ b/k8s-configurations/mysql-k8s/mysql-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mysql
+  name: charity-mysql
   labels:
     app: mysql
     tier: database
