--- a/k8s-configurations/mysql-k8s/mysql-secret.yaml
+++ b/k8s-configurations/mysql-k8s/mysql-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: mysql-secret
 type: Opaque
 data:
-  username: cGxvbmcxOTA3
-  password: cGxvbmcxOTA3
+  username: YWRtaW4=
+  password: YWRtaW4=
