--- a/k8s/springboot-deployment.yaml
+++ b/k8s/springboot-deployment.yaml
@@ -33,11 +33,11 @@ spec:
 
 # Define a 'Service' To Expose the application
 apiVersion: v1
-kind: NodePort
+kind: Service
 metadata:
   name: springbootserver-service
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: charity
   ports:
