--- a/k8s-configurations/mysql-k8s/mysql-service.yaml
+++ b/k8s-configurations/mysql-k8s/mysql-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql-service
+  name: charity-mysql-service
   labels:
     app: mysql
     tier: database
