--- a/k8s-configurations/springbootserver-k8s/springbootserver-deployment.yaml
+++ b/k8s-configurations/springbootserver-k8s/springbootserver-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: springbootserver
+  name: charity-server
 spec:
   selector:
     matchLabels:
@@ -13,7 +13,7 @@ spec:
         app: charity
     spec:
       containers:
-        - name: springbootserver
+        - name: charity-server
           image: lephilong1907/springbootserver:latest
           imagePullPolicy: Always
           ports:
