--- a/k8s-configurations/springbootserver-k8s/springbootserver-service.yaml
+++ b/k8s-configurations/springbootserver-k8s/springbootserver-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: springbootserver-service
+  name: charity-server
 spec:
   type: LoadBalancer
   selector:
