--- a/charity/Dockerfile
+++ b/charity/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:17-jdk-alpine
 WORKDIR /charity
 EXPOSE 9090
-COPY ./target/*.jar springbootserver.jar
-ENTRYPOINT ["java", "-jar", "./springbootserver.jar"]
+COPY ./target/*.jar charity.jar
+ENTRYPOINT ["java", "-jar", "./charity.jar"]
