--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.11",
     "@react-firebase/auth": "^0.2.10",
     "@react-firebase/database": "^0.2.10",
+    "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^1.9.6",
     "@stomp/stompjs": "^7.0.0",
     "@types/react-slick": "^0.23.13",
@@ -53,6 +54,7 @@
     "stompjs": "^2.3.3",
     "styled-components": "^6.1.8",
     "tailwindcss": "^3.3.3",
+    "use-places-autocomplete": "^4.0.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
