--- a/charity/src/main/resources/application.yml
+++ b/charity/src/main/resources/application.yml
@@ -4,14 +4,14 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    Deployment 
+    # Deployment 
     url: jdbc:mysql://${DB_HOST}/${DB_NAME}?allowPublicKeyRetrieval=true&useSSL=false
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
-    # Local 
+    #Local 
     # url: jdbc:mysql://localhost:3306/charitydb
     # username: root
-    # password: TanDat1410
+    # password: Long1907@
   jpa:
     show-sql: true
     properties:
