--- a/client-service.yaml
+++ b/client-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: charity-client
+  name: client
 spec:
   type: LoadBalancer
   selector:
     app: client
   ports:
-    - port: 80
+    - port: 3000
       protocol: TCP
-      targetPort: 80
+      targetPort: 3000
