--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,19 +1,16 @@
-# Fetching the latest node image on alpine linux
-FROM node:alpine AS development
+FROM node:18-alpine
 
-# Declaring env
-ENV NODE_ENV development
-
-# Setting up the work directory
 WORKDIR /client
 
-# Installing dependencies
-COPY ./package*.json /client
+COPY ./package.json /client
+
 
 RUN npm install --force
 
-# Copying all the files in our project
 COPY . .
 
-# Starting our application
-CMD ["npm","run","dev"]
+RUN npm run build
+
+EXPOSE 3000
+
+CMD [ "npm", "run", "dev" ]
