--- a/mysql-service.yaml
+++ b/mysql-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: charity-mysql-service
+  name: mysql-service
   labels:
     app: mysql
     tier: database
