--- a/server-deployment.yaml
+++ b/server-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: charity-server
+  name: server
 spec:
   selector:
     matchLabels:
@@ -13,7 +13,7 @@ spec:
         app: charity
     spec:
       containers:
-        - name: charity-server
+        - name: server
           image: lephilong1907/charity:latest
           imagePullPolicy: Always
           ports:
