--- a/charity/src/main/resources/application.yml
+++ b/charity/src/main/resources/application.yml
@@ -5,11 +5,9 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     #Deployment 
-    # url: jdbc:mysql://${DB_HOST}/${DB_NAME}?allowPublicKeyRetrieval=true&useSSL=false
-    url: jdbc:mysql://10.33.135.74:3306/${DB_NAME}?allowPublicKeyRetrieval=true&useSSL=false
+    url: jdbc:mysql://${DB_HOST}/${DB_NAME}?allowPublicKeyRetrieval=true&useSSL=false
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
-    
     # Local 
     # url: jdbc:mysql://localhost:3306/charitydb
     # username: root
