--- a/charity/src/main/resources/application.yml
+++ b/charity/src/main/resources/application.yml
@@ -11,15 +11,15 @@ spring:
     # Local 
     url: jdbc:mysql://localhost:3306/charitydb
     username: root
-    password: Long1907@
+    password: TanDat1410
   jpa:
     show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
     hibernate:
-      ddl-auto: update
-        
+      ddl-auto: create-drop
+
   servlet:
     multipart:
       enabled: true
