--- a/server-service.yaml
+++ b/server-service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: server-service
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: charity
   ports:
