--- a/server-deployment.yaml
+++ b/server-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: server
-          image: lephilong1907/charity:latest
+          image: lephilong1907/charity:tagversion
           imagePullPolicy: Always
           ports:
             - containerPort: 9090
