--- a/charity/src/main/resources/application.yml
+++ b/charity/src/main/resources/application.yml
@@ -5,20 +5,20 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     #Deployment 
-    # url: jdbc:mysql://${DB_HOST}/${DB_NAME}?allowPublicKeyRetrieval=true&useSSL=false
-    # username: ${DB_USERNAME}
-    # password: ${DB_PASSWORD}
+     url: jdbc:mysql://${DB_HOST}/${DB_NAME}?allowPublicKeyRetrieval=true&useSSL=false
+     username: ${DB_USERNAME}
+     password: ${DB_PASSWORD}
     # Local 
-    url: jdbc:mysql://localhost:3306/charitydb
-    username: root
-    password: TanDat1410
+#    url: jdbc:mysql://localhost:3306/charitydb
+#    username: root
+#    password: TanDat1410
   jpa:
     show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
 
   servlet:
     multipart:
