--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.9.0",
+    "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
     "redux": "^4.2.1",
     "slick-carousel": "^1.8.1",
