--- a/mysql-storage.yaml
+++ b/mysql-storage.yaml
@@ -1,13 +1,35 @@
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: mysql-pv
+  labels:
+    app: mysql-pv
+    tier: database
+    type: local-storage
+spec:
+  storageClassName: local-storage
+  capacity:
+    storage: 10Gi
+  accessModes:
+    - ReadWriteOnce
+  claimRef:
+    namespace: default
+    name: mysql-pv-claim
+  gcePersistentDisk:
+    pdName: local-storage
+    fsType: ext4
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-pv-claim 
+  name: mysql-pv-claim
   labels:
-    app: mysql
+    app: mysql-pv-claim
     tier: database
 spec:
+  storageClassName: local-storage
   accessModes:
-    - ReadWriteOnce   
+    - ReadWriteOnce
   resources:
     requests:
-      storage: 20Gi
+      storage: 4Gi
