--- a/mysql-deployment.yaml
+++ b/mysql-deployment.yaml
@@ -11,7 +11,10 @@ spec:
       app: mysql
       tier: database
   strategy:
-    type: Recreate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
+    type: RollingUpdate
   template:
     metadata:
       labels:
