--- a/server-deployment.yaml
+++ b/server-deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: server
-          image: lephilong1907/charity:tagversion
+          image: lephilong1907/charity:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 9090
