--- a/client-deployment.yaml
+++ b/client-deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: client
-          image: lephilong1907/client:latest
+          image: lephilong1907/client:tagversion
           imagePullPolicy: Always
           ports:
             - containerPort: 3000
