--- a/client-service.yaml
+++ b/client-service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: client
+  name: client-service
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: client
   ports:
