--- a/charity/src/main/resources/application.yml
+++ b/charity/src/main/resources/application.yml
@@ -43,7 +43,7 @@ spring:
       cache-null-values: true
   data:
     redis:
-      host: nonprofit.southeastasia.cloudapp.azure.com
+      host: 10.0.127.247
       port: 6379
 
 
