--- a/client/package.json
+++ b/client/package.json
@@ -56,7 +56,8 @@
     "styled-components": "^6.1.8",
     "tailwindcss": "^3.3.3",
     "use-places-autocomplete": "^4.0.1",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
