--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@reduxjs/toolkit": "^1.9.6",
     "@stomp/stompjs": "^7.0.0",
     "@types/react-slick": "^0.23.13",
+    "@unicef/material-ui-currency-textfield": "^0.8.6",
     "@zegocloud/zego-uikit-prebuilt": "^2.0.1",
     "antd": "^5.16.3",
     "autoprefixer": "^10.4.16",
@@ -44,6 +45,7 @@
     "react-hook-form": "^7.51.3",
     "react-icons": "^4.11.0",
     "react-moment": "^1.1.3",
+    "react-number-format": "^5.4.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.9.0",
