--- a/charity/src/main/resources/application.yml
+++ b/charity/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     # Local 
     url: jdbc:mysql://localhost:3306/charitydb
     username: root
-    password: TanDat1410
+    password: Long1907@
   jpa:
     show-sql: true
     properties:
@@ -23,8 +23,8 @@ spring:
   servlet:
     multipart:
       enabled: true
-      max-file-size: 100MB
-      max-request-size: 100MB
+      max-file-size: 500MB
+      max-request-size: 500MB
   mail:
     host: smtp.gmail.com
     port: 587
