--- a/charity/src/main/resources/application.yml
+++ b/charity/src/main/resources/application.yml
@@ -5,13 +5,13 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     #Deployment 
-    url: jdbc:mysql://${DB_HOST}/${DB_NAME}?allowPublicKeyRetrieval=true&useSSL=false
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    # url: jdbc:mysql://${DB_HOST}/${DB_NAME}?allowPublicKeyRetrieval=true&useSSL=false
+    # username: ${DB_USERNAME}
+    # password: ${DB_PASSWORD}
     # Local 
-    # url: jdbc:mysql://localhost:3306/charitydb
-    # username: root
-    # password: TanDat1410
+    url: jdbc:mysql://localhost:3306/charitydb
+    username: root
+    password: Long1907@
   jpa:
     show-sql: true
     properties:
@@ -43,8 +43,8 @@ spring:
       cache-null-values: true
   data:
     redis:
-      host: 10.0.206.75
-      # host: localhost
+      # host: 10.0.206.75
+      host: localhost
       port: 6379
 
 
